--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 /* @import-normalize; bring in normalize.css styles */
 
 body {
+  background-color: rgba(245, 236, 195, 0.178);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
